Manifest updated to internet access New dependencies from emotion and face api from ms in build.gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,9 @@ dependencies {
     compile 'com.android.support:support-v4:24.2.0'
     compile 'com.android.support:design:24.2.0'
     compile 'com.google.android.gms:play-services-vision:9.4.0+'
+
+    compile 'com.microsoft.projectoxford:emotion:1.0.0'
+    compile 'com.microsoft.projectoxford:face:1.0.0'
+    compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.google.code.gson:gson:2.5'
 }
