--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         <activity
             android:name="com.example.dumindut.gazedirectiondetector.FaceTrackerActivity"
             android:icon="@drawable/image"
-            android:label="Gaze Direcion Detector"
+            android:label="Detector"
             android:theme="@style/Theme.AppCompat.NoActionBar"
             android:screenOrientation="fullSensor">
             <intent-filter>
