--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     compile 'com.microsoft.projectoxford:emotion:1.0.0'
     compile 'com.microsoft.projectoxford:face:1.0.0'
     compile 'com.google.code.gson:gson:2.5'
+
+    compile 'com.microsoft.projectoxford:face:1.2.1'
 }
