Microsoft Cognitive Computer vision api added for object detection
if parent's and child's looking directions intersect within the preview the intersecting area is cropped and sent to vision client and depending on the resulting tags(currently only if equal to "toy") conclude whether there is an object hence whether they are having joint attention on an object

All the three microsoft api calls are done in a similar manner in order to simplicity of understanding

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 
     compile 'com.microsoft.projectoxford:emotion:1.0.0'
     compile 'com.microsoft.projectoxford:face:1.0.0'
+    compile 'com.microsoft.projectoxford:vision:1.0.354'
     compile 'com.google.code.gson:gson:2.5'
 
     compile 'com.microsoft.projectoxford:face:1.2.1'
