2 min (40 3second frames) window to buffer feature results and average Averaging results per 1 min
All emotions are taken back in arrays. Averaged per emotion

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.5'
 
     compile 'com.microsoft.projectoxford:face:1.2.1'
+
+    compile 'org.apache.commons:commons-collections4:4.1'
 }
